--- a/pipeline.yml
+++ b/pipeline.yml
@@ -2,14 +2,17 @@ resources:
 - name: project-repository
   type: git
   source:
-    uri: {{ url-project-repository }}
-    branch: {{ project-branch }}
-
+    uri:  https://github.com/Quirio/CookAdventure_TFM_UNIR.git  
+    branch: master
+    params:
+      from: vars.yml
 - name: pipeline-repository
   type: git
   source:
-    uri: {{ url-pipeline-repository }}
-    branch: {{ pipeline-branch }}
+    uri:  https://github.com/Quirio/Concourse_parametrized_pipeline.git
+    branch: develop
+    params:
+      from: vars.yml
 
 jobs:
 - name: build
